get mock impl from oas examples
